Added Authentication , Authorization and Repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Data Source=SHAHEER-DELL\\SS17;Initial Catalog=Handyman_DB;Integrated Security=True"
+  },
+  "Authentication": {
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": ""
   }
 }
