Request DTO & Repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Data Source=SHAHEER-DELL\\SS17;Initial Catalog=Handyman_DB;Integrated Security=True"
+    "db": "Data Source=.;Initial Catalog=Handyman_DB;Integrated Security=True"
   },
   "Authentication": {
     "SecretKey": "",
